--- a/style.css
+++ b/style.css
@@ -1,12 +1,10 @@
-/* BLOCKS */
-
 body {
   font-family: Roboto, sans-serif;
   font-size: 16px;
   margin: 0;
   padding: 0;
   max-width: 100%;
-  background-color: #eeeff1;
+  /* background-color: #eeeff1; */
 }
 
 .container {
@@ -18,29 +16,54 @@ body {
   padding: 0 3rem;
 }
 
-.list-menu {
+/* .list-menu {
   list-style-type: none;
   display: flex;
   margin: 0;
-}
+} */
+/* BLOCKS */
 /* Header */
 .top-header {
   display: flex;
   padding: 0;
   background-color: #fff;
+  width: 100%;
 }
 
-.top-menu {
+.top-nav {
+  display: flex;
+  justify-content: flex-end;
+  font-size: 0.8rem;
+  line-height: 2.2rem;
+  border-bottom: 2px solid #f7f7f7;
+}
+.second-nav {
+  display: flex;
+  font-weight: 600;
+  line-height: 4rem;
+}
+.banner-menu {
   display: flex;
   background-color: #003e78;
+  line-height: 4rem;
+  padding: 0 2rem;
+  justify-content: space-between;
 }
-
-.adjusting a {
-  border: 1px solid #eaeaea;
+.banner-menu__item {
+  list-style-type: none;
+  display: flex;
+  margin: 0;
+  width: 100%;
+  justify-content: space-between;
 }
-.contrast {
-  background-color: #000;
-  color: #f8f84d;
+.banner-menu--width {
+  width: 40%;
+  display: flex;
+  justify-content: space-between;
+}
+.banner-menu__item--links {
+  color: #fff;
+  text-decoration: none;
 }
 .dimensions {
   display: table;
@@ -63,6 +86,12 @@ body {
   max-width: 17%;
   border-right: 2px solid #f7f7f7;
   padding: 1rem;
+}
+.top-header__navs {
+  width: 100%;
+}
+.top-nav__item {
+  margin: 0 1rem;
 }
 
 .top-menu__items {
@@ -131,4 +160,48 @@ body {
 .footer__address {
   font-size: 0.75rem;
   opacity: 0.7;
+}
+
+/* MODIFIERS */
+.top-nav--menu {
+  list-style-type: none;
+  display: flex;
+  margin: 0;
+}
+
+.top-nav__item--adjustments-border {
+  border: 1px solid #eaeaea;
+  font-size: 0.8rem;
+  padding: 3px;
+  color: #38428d;
+  /* connot change font-weight in free version of font awesome */
+}
+.top-nav__item--contrast {
+  background-color: #000;
+  color: #f8f84d;
+}
+.top-nav__item--links-color {
+  color: #000;
+  text-decoration: none;
+}
+
+.top-nav__item--call-color {
+  color: white;
+  background-color: #14a65b;
+  margin: 0;
+  padding: 0 10px;
+}
+.top-nav__item--mirror {
+  display: inline-block;
+  transform: scaleX(-1);
+  filter: FlipH;
+}
+
+.second-nav--menu {
+  list-style-type: none;
+  display: flex;
+  width: 100%;
+  margin: 0;
+  justify-content: space-around;
+  align-items: center;
 }
