--- a/style.css
+++ b/style.css
@@ -105,6 +105,74 @@ banner {
   display: table;
 }
 
+.slideshow {
+  max-width: 100%;
+  position: relative;
+  margin: auto;
+}
+
+.slideshow__slide {
+  display: none;
+}
+
+.slideshow__previous,
+.slideshow__next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -1.5rem;
+  padding: 1rem;
+  color: rgba(255, 255, 255, 0.6);
+  font-weight: bold;
+  font-size: 4rem;
+  transition: 0.6s ease;
+  user-select: none;
+}
+.slideshow__next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.slideshow__counter {
+  color: #fff;
+  background-color: #000;
+  font-size: 0.9rem;
+  padding: 2px 8px;
+  position: absolute;
+  bottom: 8px;
+  text-align: center;
+  margin-left: 9rem;
+  margin-bottom: 1.5rem;
+  border-radius: 10px;
+}
+.slideshow-slide--width {
+  max-width: 100%;
+}
+.slideshow-slide--fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
 .footer {
   background-color: #43484d;
   color: #9fa7af;
@@ -190,6 +258,9 @@ banner {
 }
 
 /* MODIFIERS */
+.top-header__logo--width {
+  max-width: 100%;
+}
 .top-nav--menu {
   list-style-type: none;
   display: flex;
