--- a/style.css
+++ b/style.css
@@ -4,13 +4,23 @@ body {
   margin: 0;
   padding: 0;
   max-width: 100%;
-  /* background-color: #eeeff1; */
 }
-
-.information {
-  padding: 0 3rem;
+.container {
+  display: flex;
+  width: 100%;
 }
-
+.container--narrow {
+  padding: 0 9rem;
+}
+.container--fit {
+  max-width: 100%;
+}
+.container--padding {
+  padding: 0 2rem;
+}
+.container--block {
+  display: block;
+}
 /* .list-menu {
   list-style-type: none;
   display: flex;
@@ -18,28 +28,72 @@ body {
 } */
 /* BLOCKS */
 /* Header */
-.top-header {
-  display: flex;
-  padding: 0;
-  background-color: #fff;
-  width: 100%;
-}
 
-.top-nav {
+.nav {
   display: flex;
-  justify-content: flex-end;
+  list-style-type: none;
+  margin: 0;
+}
+.nav__item {
+  margin: 0 0 0 1rem;
+  padding: 0 10px;
+}
+.nav--small {
   font-size: 0.8rem;
   line-height: 2.2rem;
+}
+
+.nav--justify-end {
+  justify-content: flex-end;
+}
+.nav--space-around {
+  justify-content: space-around;
+}
+.nav--space-between {
+  justify-content: space-between;
+}
+.nav--border-bottom {
   border-bottom: 2px solid #f7f7f7;
 }
-.second-nav {
-  display: flex;
+
+.nav__item--border {
+  border: 1px solid #eaeaea;
+}
+.nav__item--small {
+  font-size: 0.8rem;
+  padding: 3px;
+}
+.nav__item--blue {
+  color: #38428d;
+}
+.nav__item--contrast {
+  background-color: #000;
+  color: #f8f84d;
+}
+.nav__item--links-decoration {
+  color: #000;
+  text-decoration: none;
+}
+
+.nav__item--green-background {
+  color: white;
+  background-color: #14a65b;
+}
+.nav__item--mirror {
+  display: inline-block;
+  transform: scaleX(-1);
+  filter: FlipH;
+}
+.nav--large {
   font-weight: 600;
   line-height: 4rem;
 }
+.nav--blue {
+  background-color: #003e78;
+}
 .banner-menu {
   display: flex;
-  background-color: #003e78;
+
   line-height: 4rem;
   padding: 0 2rem;
   justify-content: space-between;
@@ -67,8 +121,7 @@ body {
 .banner-menu__item--color:focus {
   border-bottom: 0.5rem solid white;
 }
-banner {
-}
+
 .banner__image {
   max-width: 100%;
   margin: 0 auto;
@@ -173,34 +226,121 @@ banner {
     opacity: 1;
   }
 }
+
+.accessibility {
+  padding: 2rem 9rem;
+  background-color: #eeeff1;
+  margin-top: -4px;
+}
+.accessibility__paragraphs {
+  line-height: 1.5rem;
+}
+.accessibility__button {
+  display: flex;
+  justify-content: center;
+}
+.accessibility__button--large {
+  background-color: #017edb;
+  color: #fff;
+  border: none;
+  outline: none;
+  border-radius: 0.25rem;
+  padding: 0.75rem 1.2rem;
+
+  font-size: 1rem;
+  margin: 2rem auto;
+}
 .footer {
   background-color: #43484d;
-  color: #9fa7af;
+  color: #cbcbcb;
+  margin-top: -4px;
 }
 
-.form {
-  float: right;
-  background-color: #fff;
-  margin-top: 1rem;
-  max-width: 35%;
-  padding: 0.6rem 1rem 1rem 1.5rem;
+.footer__text {
+  font-size: 0.9rem;
 }
-/* ELEMENTS */
-.top-header__logo {
-  max-width: 17%;
-  border-right: 2px solid #f7f7f7;
+
+.logo {
+  max-width: 14rem;
   padding: 1rem;
 }
-.top-header__navs {
-  width: 100%;
+.logo--right-border {
+  border-right: 2px solid #f7f7f7;
 }
-.top-nav__item {
-  margin: 0 1rem;
+.logo--invert {
+  -webkit-filter: invert(0.9) brightness(2) contrast(0.6);
+  filter: invert(0.9) brightness(2) contrast(0.6);
+}
+.flex-row {
+  display: flex;
+  flex-wrap: wrap;
+}
+.column--forty {
+  max-width: 40%;
+}
+.links-list {
+  list-style-type: none;
+  display: flex;
+  margin: 0;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.footer__links {
+  display: flex;
+  flex-direction: column;
+  margin: 3rem 1rem;
 }
 
-.top-menu__items {
-  color: #fff;
+.footer__address {
+  font-size: 0.75rem;
+  opacity: 0.7;
 }
+.inquery {
+  background-color: #eeeff1;
+  display: flex;
+  justify-content: flex-end;
+}
+.inquery__form {
+  background-color: #fff;
+  margin: 3rem 2.4rem 0 0;
+  max-width: 29%;
+  padding: 0 0.9rem 1.8rem 0.9rem;
+}
+.inquery__heading {
+  font-size: 1.6rem;
+}
+.inquery__text {
+  line-height: 1.5rem;
+  margin: 0.5rem;
+}
+
+.inquery__input {
+  font-size: 1rem;
+  width: 33%;
+  line-height: 1.5rem;
+  border: none;
+  background-color: #eeeff1;
+  outline: none;
+  border-radius: 0.25rem;
+  padding: 0.6rem 1rem;
+  margin-right: 0.25rem;
+}
+.inquery__input::placeholder {
+  color: #000;
+  opacity: 1;
+}
+
+.button {
+  background-color: #003e78;
+  color: #fff;
+  border: none;
+  outline: none;
+  border-radius: 0.25rem;
+  line-height: 1.5rem;
+  padding: 0.6rem;
+  font-size: 1rem;
+}
+/* ELEMENTS */
 
 .tabs__selector {
   width: 100%;
@@ -237,69 +377,7 @@ banner {
   flex-wrap: wrap;
 }
 
-.footer__logo {
-  -webkit-filter: saturate(0);
-}
-.footer__row {
-  display: flex;
-}
-.footer__info {
-  max-width: 55%;
-}
-.footer__links {
-  display: flex;
-  flex-direction: column;
-  margin: 3rem 1rem;
-}
-
-.footer__address {
-  font-size: 0.75rem;
-  opacity: 0.7;
-}
-
 /* MODIFIERS */
-.top-header__logo--width {
+.image--fit {
   max-width: 100%;
-}
-.top-nav--menu {
-  list-style-type: none;
-  display: flex;
-  margin: 0;
-}
-
-.top-nav__item--adjustments-border {
-  border: 1px solid #eaeaea;
-  font-size: 0.8rem;
-  padding: 3px;
-  color: #38428d;
-  /* connot change font-weight in free version of font awesome */
-}
-.top-nav__item--contrast {
-  background-color: #000;
-  color: #f8f84d;
-}
-.top-nav__item--links-color {
-  color: #000;
-  text-decoration: none;
-}
-
-.top-nav__item--call-color {
-  color: white;
-  background-color: #14a65b;
-  margin: 0;
-  padding: 0 10px;
-}
-.top-nav__item--mirror {
-  display: inline-block;
-  transform: scaleX(-1);
-  filter: FlipH;
-}
-
-.second-nav--menu {
-  list-style-type: none;
-  display: flex;
-  width: 100%;
-  margin: 0;
-  justify-content: space-around;
-  align-items: center;
 }
