--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ body {
 
 /* MODIFIERS */
 .container--narrow {
-  padding: 0 9rem;
+  padding: 2rem 9rem;
 }
 .container--fit {
   max-width: 100%;
